Version (SVN)
-------------------------------

XML:   Resolved issue CASTOR-1760 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       <xsd:int> mappes onto Java type 'int/java.lang.Integer' again.
       Details: http://jira.codehaus.org/browse/CASTOR-1760
       (Werner - 20061226)

XML:   Resolved issue CASTOR-1761 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Java 5 breaks BigDecimal validation
       Details: http://jira.codehaus.org/browse/CASTOR-1761
       (Edward - 20061223)

XML:   Resolved issue CASTOR-1758 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Complete facet handling for numerical types
       Details: http://jira.codehaus.org/browse/CASTOR-1758
       (Edward - 20061223)

Version 1.1-M1, Dec 23, 2006
-------------------------------

XML:   Resolved issue CASTOR-1756 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Checkstyle-based cleanup in builder/types
       Details: http://jira.codehaus.org/browse/CASTOR-1756
       (Edward - 20061222)

XML:   Resolved issue CASTOR-1755 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Complete (to first pass) the test for all date/time types
       Details: http://jira.codehaus.org/browse/CASTOR-1755
       (Edward - 20061222)

XML:   Resolved issue CASTOR-1748 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Removed state pool in UnmarshalHandler.
       Details: http://jira.codehaus.org/browse/CASTOR-1748
       (Werner - 20061222)

Doc:   Resolved issue CASTOR-1752 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Update xmlschema.xml srcgen documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1752
       (Edward - 20061222)

Doc:   Resolved issue CASTOR-1751 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Cleanup/update of srcgen/test documentation
       Details: http://jira.codehaus.org/browse/CASTOR-1751