@@ -1,0 +1,16 @@
+<?xml version='1.0'?>
+<TestDescriptor>
+    <Name>Testing XML Schema extension of complex types</Name>
+    <Author>Werner Guttmann</Author>
+    <Comment>Test that ensures that extensions of complex types are correctly handled</Comment>
+    <Category>basic capability</Category>
+    <SourceGeneratorTest>
+        <Schema>test.xsd</Schema>
+        <BindingFile>binding.xml</BindingFile>
+        <Root_Object random="false" dump="true">UnderlyerAdjustment</Root_Object>
+        <UnitTestCase>
+            <Name>TestGenerationOK</Name>
+            <Input>input.xml</Input>
+        </UnitTestCase>
+    </SourceGeneratorTest>
+</TestDescriptor>
