@@ -1,0 +1,11 @@
+<?xml version="1.0"?>
+<cbf:binding xmlns:cbf="http://www.castor.org/SourceGenerator/Binding"
+	defaultBindingType='element'>
+
+	<cbf:namingXML>
+		<cbf:complexTypeName>
+			<cbf:suffix>Type</cbf:suffix>
+		</cbf:complexTypeName>
+	</cbf:namingXML>
+	
+</cbf:binding>
