@@ -1,0 +1,7 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--Sample XML file generated by XMLSpy v2006 sp2 U (http://www.altova.com)-->
+<underlyerAdjustment xmlns="http://www.fpml.org/2003/FpML-4-0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<eventEffectiveDate>2006-05-09</eventEffectiveDate>
+	<unwindCashflow>1</unwindCashflow>
+</underlyerAdjustment>
